--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -129,7 +129,7 @@ body {
     color: crimson;
 }
 
-#j_idt7 {
+#normClock {
     border: solid orange 2px;
     background-color: white;
     border-radius: 15px;
